<resources>
    <string name="app_name">GameMatcher2</string>

    <string name="title_match_name">Name</string>
    <string name="hint_match_name">College fun</string>
    <string name="title_match_location">Location</string>
    <string name="hint_match_location">Victoria Park</string>
    <string name="title_match_date">Date</string>
    <string name="title_match_sport">Sport</string>
    <string name="hint_match_date">dd/MM/yyyy</string>
    <string name="text_crete_match_button">Create</string>

    <string name="title_match_players">Players</string>
    <string name="bt_add_player">Add</string>
    <string name="bt_pick_team">Pick Teams</string>

    <string name="toolbar_title_match_list">Your matches</string>
    <string name="toolbar_title_match_details">Match Details</string>
    <string name="toolbar_title_create_match">Create Match</string>
    <string name="toolbar_title_edit_player">Edit Player</string>
    <string name="toolbar_title_add_player">Add Player</string>
    <string name="toolbar_title_pick_team"> Pick Teams</string>

    <string name="alert_dialog_remove_match_title">Remove Match?</string>
    <string name="alert_dialog_remove_match_positive">Yes</string>
    <string name="alert_dialog_remove_match_negative">No</string>

    <string name="alert_dialog_remove_player_title">Remove Player?</string>
    <string name="alert_dialog_remove_player_positive">Yes</string>
    <string name="alert_dialog_remove_player_negative">No</string>

    <string name="example_match_name">Match Name</string>
    <string name="example_match_sport">Sport</string>
    <string name="example_match_location">Match Location</string>
    <string name="example_match_date">dd/MM/yyyy</string>
    <string name="example_player_position">Position</string>

    <string name="key_parcelable_match">match_data</string>
    <string name="key_parcelable_player">player_data</string>

    <string name="text_player_name">Player</string>
    <string name="hint_player_name">Robert Rodriguez</string>
    <string name="text_player_position">Position</string>
    <string name="hint_player_position">Attack</string>

    <string name="checkbox_position_attack">Attack</string>
    <string name="checkbox_position_defense">Defense</string>
    <string name="checkbox_position_midfield">Midfield</string>
    <string name="checkbox_position_goal">Goal</string>

    <string name="bt_player_detail_confirm">Confirm</string>

    <string name="text_pick_random">All Random</string>
    <string name="text_pick_goalkeeper">Fixed Goalkeepers</string>
    <string name="text_pick_position">Use positions</string>
    <string name="text_button_pick">GO</string>

    <string name="log_event">event</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
