<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.PlayerDetailFragment"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/tv_detail_player_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_player_name" />

        <EditText
            android:id="@+id/et_detail_player_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_player_name"
            android:inputType="text"
            android:importantForAutofill="no" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/tv_detail_player_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_player_position" />
        <EditText
            android:id="@+id/et_detail_player_position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_player_position"
            android:inputType="text"
            android:importantForAutofill="no" />
    </LinearLayout>

    <Button
        android:id="@+id/bt_player_detail_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_player_detail_confirm"
        />

</LinearLayout>