<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.CreateMatchFragment"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/tv_match_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/title_match_name"
            />

        <EditText
            android:id="@+id/et_match_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_match_name"
            android:inputType="text"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/tv_match_location"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/title_match_location"
            />

        <EditText
            android:id="@+id/et_match_location"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_match_location"
            android:inputType="text"
            android:importantForAutofill="no" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/tv_match_date"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/title_match_date"
            />

        <EditText
            android:id="@+id/et_match_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:importantForAutofill="no" />
    </LinearLayout>

    <Button
        android:id="@+id/bt_save_match"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>