<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_match_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_match_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/ExtendedGameTheme"
        />

    <TextView
        android:id="@+id/tv_match_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_match_location"
        app:layout_constraintTop_toBottomOf="@+id/tv_match_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/ExtendedGameTheme"
        />

    <TextView
        android:id="@+id/tv_match_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_match_date"
        app:layout_constraintTop_toBottomOf="@+id/tv_match_location"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/ExtendedGameTheme"
        />


</androidx.constraintlayout.widget.ConstraintLayout>