<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".match.fragment.MatchDetailFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_detail_match"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        style="@style/ToolbarGameTheme"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title_match_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toolbar_title_match_list"
            android:textColor="@color/colorTextPrimary"
            style="@style/ToolbarGameTheme"
            />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/tv_detail_match_sport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/example_match_sport"
        android:textAlignment="center"
        android:textColor="@color/colorTextPrimary"
        android:background="@color/colorAccent"

        android:textSize="@dimen/match_title_text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb_detail_match" />

    <Space
        android:id="@+id/sp_match_detail_3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="443dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_match_sport"

        />

    <TextView
        android:id="@+id/tv_detail_match_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_match_name"
        android:textSize="@dimen/match_title_text_size"
        android:layout_margin="@dimen/margin_top"
        android:textColor="@color/colorTextPrimary"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_match_detail_3" />


    <Space
        android:id="@+id/sp_match_detail_2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="443dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_match_name"

        />


    <TextView
        android:id="@+id/tv_detail_match_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_match_location"
        android:textSize="@dimen/match_text_size"
        android:layout_margin="@dimen/margin_top"
        android:textColor="@color/colorTextPrimary"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sp_match_detail_2"
        />
    <TextView
        android:id="@+id/tv_detail_match_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_match_date"
        android:textSize="@dimen/match_text_size"
        android:layout_margin="@dimen/margin_top"
        android:textColor="@color/colorTextPrimary"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_match_location"
        />

    <Space
        android:id="@+id/sp_match_detail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="443dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_match_date"

        />


    <TextView
        android:id="@+id/tv_detail_player_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_match_players"
        android:textSize="@dimen/match_title_text_size"
        android:textStyle="bold"
        android:layout_margin="@dimen/margin_top"
        android:textColor="@color/colorTextPrimary"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_match_detail" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_players"
        android:layout_width="250dp"
        android:layout_height="330dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/bt_detail_add_player"
        app:layout_constraintTop_toTopOf="@+id/bt_detail_add_player"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/bt_detail_add_player"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:text="@string/bt_add_player"
        android:layout_margin="@dimen/margin_top"
        app:layout_constraintLeft_toRightOf="@+id/rv_players"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_player_list"
        app:layout_constraintRight_toRightOf="parent"

        />

    <Button
        android:id="@+id/bt_detail_pick_team"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:text="@string/bt_pick_team"
        android:layout_margin="@dimen/margin_top"
        app:layout_constraintLeft_toRightOf="@+id/rv_players"
        app:layout_constraintTop_toBottomOf="@+id/bt_detail_add_player"
        app:layout_constraintRight_toRightOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout >